[package]
name = "gunship"
version = "0.1.0"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]
edition = "2018"

[features]
timing = []
no-draw = []

[dependencies]
bootstrap_rs = { path = "lib/bootstrap_rs" }
#bootstrap_audio = { path = "lib/bootstrap_audio" }
cell-extras = { git = "https://github.com/randomPoison/cell-extras" }
crossbeam-channel = "*"
fiber = { version = "0.1", path = "lib/fiber" }
hash = { path = "lib/hash" }
parse_collada = { path = "lib/parse_collada" }
once_cell = "*"
parking_lot = "*"
parse-obj = { version = "0.1", path = "lib/parse-obj" }
polygon = { path = "lib/polygon_rs" }
polygon_math = { path = "lib/polygon_math" }
stopwatch = { path = "lib/stopwatch" }

[dev_dependencies]
rand = "*"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
