[package]
name = "bootstrap_rs"
version = "0.0.0"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
cell-extras = { git = "https://github.com/excaliburHisSheath/cell-extras" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wingdi", "errhandlingapi", "libloaderapi", "winuser", "windef"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.20"
core-graphics = "0.19"
core-foundation = "0.7"

# [dependencies.x11]
# version = "*"
# features = ["glx", "xlib"]
