[package]
name = "gl-util"
version = "0.1.0"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]
edition = "2018"

[dependencies]
bootstrap-gl = { version = "0.1", path = "../bootstrap-gl" }
bootstrap_rs = { version = "0.0", path = "../bootstrap_rs" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.8", features = ["windef", "winuser"] }

[dev_dependencies]
parse-obj = { version = "0.1", path = "../parse-obj" }
parse-bmp = { version = "0.1", path = "../parse-bmp" }
