[package]
name = "stopwatch"
version = "0.0.0"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]
edition = "2018"

[dependencies]
bootstrap_rs = { path = "../bootstrap_rs" }
fiber = { path = "../fiber" }
once_cell = "*"
parking_lot = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

#[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.8", features = ["processthreadsapi", "profileapi"] }